--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ img.img-fluid.img-book {border-top-left-radius: 10px;border-top-right-radius: 10
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 /* Add Styline */
+}
 
 .list-title h4 {
     text-align: center;
