--- a/auth/assets/css/login.css
+++ b/auth/assets/css/login.css
@@ -107,6 +107,7 @@ body {
 
 .bottom-label {
   border: 1px solid #e0e0e0;
+  border-radius: 5px;
 }
 
 .label-login {
@@ -336,4 +337,18 @@ body {
 .forgot-wrapper h1 {
   font-size: 2.5rem;
   margin-bottom: 0.5rem;
+}
+
+.invalid-feedback {
+  display: none;
+  width: 100%;
+  margin-top: .25rem;
+  margin-left: 1rem;
+  font-size: 80%;
+  color: #dc3545;
+  margin-bottom: .25rem;
+}
+
+.form-group {
+  margin-bottom: 0rem;
 }
