--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ p{
 
 img.big-preview{
     background-size: cover;
-    background-image: url(../assets/background.png);
+    background-image: url(./assets/background.png);
     max-height: 350px;
     max-width: 100%;
     
@@ -50,7 +50,7 @@ h1.titletext{
 
 a#button_borrow{
     position: absolute;      
-    top: 65%;
+    top: 55%;
     left: 80%;    
     color: white;   
     font-size: 25px; 
@@ -114,8 +114,13 @@ ul.menuhead li a:hover {
 }
 
 .row#recomended{
+    margin: 20px; 
+}
+
+#recomendedcard img{
     
-    margin: 20px;    
+    height: 150px;
+    width: 250px;
 }
 
 a#toggle{
@@ -131,6 +136,16 @@ a#toggle{
         margin-left: 500px;
         float: right;
                
+    }
+
+    img.small-preview{
+        top: 30%;
+        left: 90%;
+        transform: translate(-50%,-50%);
+        position: absolute;    
+        height: 150px;
+        width: 100px
+        
     }
 
     a#toggle{
@@ -170,7 +185,7 @@ a#toggle{
     }
 
     img.small-preview{
-        top: 25%;
+        top:20%;
         left: 90%;
         transform: translate(-50%,-50%);
         position: absolute;    
@@ -188,7 +203,7 @@ a#toggle{
 
     a#button_borrow{
         position: absolute;              
-        top: 40%;
+        top: 35%;
         left: 75%;    
         color: white;   
         font-size: 25px; 
@@ -206,7 +221,7 @@ a#toggle{
 
         a#button_borrow{
             position: absolute;              
-            top: 26%;
+            top: 20%;
             left: 65%;    
             color: white;   
             font-size: 15px; 
@@ -216,7 +231,7 @@ a#toggle{
         }
 
         img.small-preview{
-            top: 20%;
+            top: 15%;
             left: 80%;
             transform: translate(-50%,-50%);
             position: absolute;    
@@ -257,7 +272,7 @@ a#toggle{
 
     a#button_borrow{
         position: absolute;              
-        top: 24%;
+        top: 20%;
         left: 70%;    
         color: white;   
         font-size: 10px; 
@@ -267,7 +282,7 @@ a#toggle{
     }
 
     img.small-preview{
-        top: 18%;
+        top: 15%;
         left: 80%;
         transform: translate(-50%,-50%);
         position: absolute;    
