--- a/home/style.css
+++ b/home/style.css
@@ -1,4 +1,52 @@
 .profile-section {
-    display: flex !important;
-    flex-direction: column !important;
+  display: flex !important;
+  flex-direction: column !important;
+}
+
+.main-carousel {
+  margin: 1rem;
+}
+
+.carousel-cell {
+  width: 37.5rem;
+  height: 300px;
+  margin-right: 68px !important;
+  background: #fff;
+  counter-increment: carousel-cell;
+}
+
+.carousel .carousel-info {
+  border-radius: 0 0 5px 5px;
+  bottom: 0px;
+  position: absolute;
+  padding: 1rem;
+  width: 100%;
+  height: 50%;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.carousel .carousel-info .carousel-text {
+  float: left !important;
+  margin-top: 1rem;
+}
+
+.carousel .carousel-info h2 {
+  color: #fff;
+  font-weight: 600;
+}
+
+.carousel .carousel-info h3 {
+  color: #fff;
+  font-size: 1.3rem;
+}
+
+/* fade in lazy loaded image */
+.carousel-cell-image.flickity-lazyloaded,
+.carousel-cell-image.flickity-lazyerror {
+  opacity: 1;
+}
+
+.container-fluid.book-list {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
 }
