--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .button{
     margin-left: 20px;
-    margin-top: 10px;
+    margin-top: 10px;    
     position: absolute;
     z-index: 100;
 }
@@ -22,19 +22,19 @@ img.big-preview{
     background-image: url(./assets/background.png);
     max-height: 350px;
     max-width: 100%;
-
+    
 }
 
-.category {
+.category {	
 	width:60px;
 	height:20px;
 	bottom:40px;
     right:40px;
     margin-left: 70px;
-	background-color:yellow;
-    border-radius:50px;
-    text-align: center;
-    transition: 0.6s ease;
+	background-color:yellow;	
+    border-radius:50px;	
+    text-align: center;	
+    transition: 0.6s ease;            
 }
 
 p.content{
@@ -49,11 +49,11 @@ h1.titletext{
 }
 
 a#button_borrow{
-    position: absolute;
-    top: 65%;
-    left: 80%;
-    color: white;
-    font-size: 25px;
+    position: absolute;      
+    top: 50%;
+    left: 80%;    
+    color: white;   
+    font-size: 25px; 
     width: 150px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -71,23 +71,23 @@ p.date{
     font-weight: bold;
 }
 
-.category p{
+.category p{    
     color: black;
     text-decoration: none;
-    font-size: 15px;
+    font-size: 15px;            
 }
 
 img.small-preview{
-    top: 35%;
+    top: 30%;
     left: 90%;
     transform: translate(-50%,-50%);
-    position: absolute;
+    position: absolute;    
     height: 150px;
     width: 100px
-
+    
 }
 
-ul.menuhead{
+ul.menuhead{    
     margin-left: 900px;
     float: right;
 }
@@ -114,23 +114,28 @@ ul.menuhead li a:hover {
 }
 
 .row#recomended{
-    margin: 20px;
+    margin: 20px; 
+}
 
+#recomendedcard img{
+    
+    height: 280px;
+    width: 250px;
 }
 
 a#toggle{
     color: black;
-    float: right;
+    float: right;    
     margin-left: 1000px;
     text-decoration: none;
     position: absolute;
 }
 
 @media (max-width: 1024px){
-    ul.menuhead{
+    ul.menuhead{    
         margin-left: 500px;
         float: right;
-
+               
     }
 
     img.small-preview{
@@ -145,18 +150,16 @@ a#toggle{
 
     a#toggle{
         color: black;
-        float: right;
+        float: right;    
         margin-left: 500px;
         text-decoration: none;
         position: absolute;
     }
 
-    .row#recomended #recomendedcard{
-        padding: 10px;
-        height: auto;
+    .row#recomended{
+        text-decoration: none;
     }
-
-
+    
 }
 
 @media (max-width: 800px){
@@ -164,45 +167,44 @@ a#toggle{
         background-size: cover;
         background-image: url(./assets/background.png);
         max-height: 350px;
-        max-width: 100%;
+        max-width: 100%;        
     }
 
-    ul.menuhead{
+    ul.menuhead{    
         margin-left: 500px;
         float: right;
     }
 
     a#toggle{
         color: black;
-        float: right;
+        float: right;    
         margin-left: 500px;
-        text-decoration: none;
+        text-decoration: none;                
     }
 
     img.small-preview{
-        top:20%;
+        top:17%;
         left: 90%;
         transform: translate(-50%,-50%);
-        position: absolute;
+        position: absolute;    
         height: 150px;
         width: 100px
-
+        
     }
 
     .row#recomended{
         text-decoration: none;
-        margin-left: 80px;
+        margin-left: 200px;
         display: list-item;
-        color: white;
+        color: black;        
     }
 
     a#button_borrow{
-        position: absolute;
-        top: 40%;
-        left: 75%;
-        color: white;
-        font-size: 25px;
-
+        position: absolute;              
+        top: 33%;
+        left: 75%;    
+        color: white;   
+        font-size: 25px; 
         width: 150px;
         border-radius: 10px;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -210,31 +212,30 @@ a#toggle{
 }
 
 @media (max-width: 450px){
-        ul.menuhead{
+        ul.menuhead{    
             margin-left: 200px;
             float: right;
         }
 
         a#button_borrow{
-            position: absolute;
-            top: 26%;
-            left: 65%;
-            color: white;
-            font-size: 15px;
-
+            position: absolute;              
+            top: 18%;
+            left: 65%;    
+            color: white;   
+            font-size: 15px; 
             width: 75px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
         }
 
         img.small-preview{
-            top: 15%;
+            top: 13%;
             left: 80%;
             transform: translate(-50%,-50%);
-            position: absolute;
+            position: absolute;    
             height: 150px;
             width: 100px
-
+            
         }
 
         h1.statustext{
@@ -247,12 +248,12 @@ a#toggle{
             text-decoration: none;
             margin-left: 60px;
             display: list-item;
-            color: white;
+            color: black;
         }
 
         a#toggle{
             color: black;
-            float: right;
+            float: right;    
             margin-left: 300px;
             text-decoration: none;
             position: absolute;
@@ -260,7 +261,7 @@ a#toggle{
 }
 
 @media (max-width: 330px){
-    ul.menuhead{
+    ul.menuhead{    
         margin-left: 150px;
         float: right;
         display: list-item;
@@ -268,36 +269,36 @@ a#toggle{
     }
 
     a#button_borrow{
-        position: absolute;
-        top: 24%;
-        left: 70%;
-        color: white;
-        font-size: 10px;
+        position: absolute;              
+        top: 18%;
+        left: 70%;    
+        color: white;   
+        font-size: 10px; 
         width: 60px;
         border-radius: 10px;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     }
 
     img.small-preview{
-        top: 15%;
+        top: 14%;
         left: 80%;
         transform: translate(-50%,-50%);
-        position: absolute;
+        position: absolute;    
         height: 100px;
         width: 75px
-
+        
     }
 
     .row#recomended{
         text-decoration: none;
         margin-left: 15px;
-        display: list-item;
-        color: white;
+        orientation: auto;
+        color: black;
     }
 
     a#toggle{
         color: black;
-        float: right;
+        float: right;    
         margin-left: 250px;
         text-decoration: none;
         position: absolute;
@@ -352,11 +353,11 @@ a#toggle{
     padding: 7.5px;
 }
 
-img.img-fluid.img-book {border-top-left-radius: 10px;border-top-right-radius: 10px; width: 100%; height: 15rem;}
+img.img-fluid.img-book {border-top-left-radius: 10px;border-top-right-radius: 10px;}
 
 .list-book-detail {
     background: white;
-    padding: 1rem;
+    padding-top: 0px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 /* Add Styline */
