--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .button{
     margin-left: 20px;
-    margin-top: 10px;    
+    margin-top: 10px;
     position: absolute;
     z-index: 100;
 }
@@ -22,19 +22,19 @@ img.big-preview{
     background-image: url(./assets/background.png);
     max-height: 350px;
     max-width: 100%;
-    
+
 }
 
-.category {	
+.category {
 	width:60px;
 	height:20px;
 	bottom:40px;
     right:40px;
     margin-left: 70px;
-	background-color:yellow;	
-    border-radius:50px;	
-    text-align: center;	
-    transition: 0.6s ease;            
+	background-color:yellow;
+    border-radius:50px;
+    text-align: center;
+    transition: 0.6s ease;
 }
 
 p.content{
@@ -49,11 +49,11 @@ h1.titletext{
 }
 
 a#button_borrow{
-    position: absolute;      
+    position: absolute;
     top: 50%;
-    left: 80%;    
-    color: white;   
-    font-size: 25px; 
+    left: 80%;
+    color: white;
+    font-size: 25px;
     width: 150px;
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -71,23 +71,23 @@ p.date{
     font-weight: bold;
 }
 
-.category p{    
+.category p{
     color: black;
     text-decoration: none;
-    font-size: 15px;            
+    font-size: 15px;
 }
 
 img.small-preview{
     top: 30%;
     left: 90%;
     transform: translate(-50%,-50%);
-    position: absolute;    
+    position: absolute;
     height: 150px;
     width: 100px
-    
+
 }
 
-ul.menuhead{    
+ul.menuhead{
     margin-left: 900px;
     float: right;
 }
@@ -114,43 +114,43 @@ ul.menuhead li a:hover {
 }
 
 .row#recomended{
-    margin: 20px; 
+    margin: 20px;
 }
 
 #recomendedcard img{
-    
+
     height: 280px;
     width: 250px;
 }
 
 a#toggle{
     color: black;
-    float: right;    
+    float: right;
     margin-left: 1000px;
     text-decoration: none;
     position: absolute;
 }
 
 @media (max-width: 1024px){
-    ul.menuhead{    
+    ul.menuhead{
         margin-left: 500px;
         float: right;
-               
+
     }
 
     img.small-preview{
         top: 30%;
         left: 90%;
         transform: translate(-50%,-50%);
-        position: absolute;    
+        position: absolute;
         height: 150px;
         width: 100px
-        
+
     }
 
     a#toggle{
         color: black;
-        float: right;    
+        float: right;
         margin-left: 500px;
         text-decoration: none;
         position: absolute;
@@ -159,7 +159,7 @@ a#toggle{
     .row#recomended{
         text-decoration: none;
     }
-    
+
 }
 
 @media (max-width: 800px){
@@ -167,44 +167,44 @@ a#toggle{
         background-size: cover;
         background-image: url(./assets/background.png);
         max-height: 350px;
-        max-width: 100%;        
+        max-width: 100%;
     }
 
-    ul.menuhead{    
+    ul.menuhead{
         margin-left: 500px;
         float: right;
     }
 
     a#toggle{
         color: black;
-        float: right;    
+        float: right;
         margin-left: 500px;
-        text-decoration: none;                
+        text-decoration: none;
     }
 
     img.small-preview{
         top:17%;
         left: 90%;
         transform: translate(-50%,-50%);
-        position: absolute;    
+        position: absolute;
         height: 150px;
         width: 100px
-        
+
     }
 
     .row#recomended{
         text-decoration: none;
         margin-left: 200px;
         display: list-item;
-        color: black;        
+        color: black;
     }
 
     a#button_borrow{
-        position: absolute;              
+        position: absolute;
         top: 33%;
-        left: 75%;    
-        color: white;   
-        font-size: 25px; 
+        left: 75%;
+        color: white;
+        font-size: 25px;
         width: 150px;
         border-radius: 10px;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -212,17 +212,17 @@ a#toggle{
 }
 
 @media (max-width: 450px){
-        ul.menuhead{    
+        ul.menuhead{
             margin-left: 200px;
             float: right;
         }
 
         a#button_borrow{
-            position: absolute;              
+            position: absolute;
             top: 18%;
-            left: 65%;    
-            color: white;   
-            font-size: 15px; 
+            left: 65%;
+            color: white;
+            font-size: 15px;
             width: 75px;
             border-radius: 10px;
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -232,10 +232,10 @@ a#toggle{
             top: 13%;
             left: 80%;
             transform: translate(-50%,-50%);
-            position: absolute;    
+            position: absolute;
             height: 150px;
             width: 100px
-            
+
         }
 
         h1.statustext{
@@ -253,7 +253,7 @@ a#toggle{
 
         a#toggle{
             color: black;
-            float: right;    
+            float: right;
             margin-left: 300px;
             text-decoration: none;
             position: absolute;
@@ -261,7 +261,7 @@ a#toggle{
 }
 
 @media (max-width: 330px){
-    ul.menuhead{    
+    ul.menuhead{
         margin-left: 150px;
         float: right;
         display: list-item;
@@ -269,11 +269,11 @@ a#toggle{
     }
 
     a#button_borrow{
-        position: absolute;              
+        position: absolute;
         top: 18%;
-        left: 70%;    
-        color: white;   
-        font-size: 10px; 
+        left: 70%;
+        color: white;
+        font-size: 10px;
         width: 60px;
         border-radius: 10px;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
@@ -283,10 +283,10 @@ a#toggle{
         top: 14%;
         left: 80%;
         transform: translate(-50%,-50%);
-        position: absolute;    
+        position: absolute;
         height: 100px;
         width: 75px
-        
+
     }
 
     .row#recomended{
@@ -298,7 +298,7 @@ a#toggle{
 
     a#toggle{
         color: black;
-        float: right;    
+        float: right;
         margin-left: 250px;
         text-decoration: none;
         position: absolute;
@@ -353,7 +353,7 @@ a#toggle{
     padding: 7.5px;
 }
 
-img.img-fluid.img-book {border-top-left-radius: 10px;border-top-right-radius: 10px;}
+img.img-fluid.img-book {border-top-left-radius: 10px;border-top-right-radius: 10px; height: 15rem;}
 
 .list-book-detail {
     background: white;
