fix some style in modal detail

--- a/style.css
+++ b/style.css
@@ -476,9 +476,9 @@ a.recomendedcard1 {
     text-align: center;
 }
 
-.modal-content#edit-module {
+/* .modal-content#edit-module {
     width: 150%;
-}
+} */
 
 h2.title-container {
     font-weight: bold;
