rapiin page home sedikit

--- a/style.css
+++ b/style.css
@@ -431,6 +431,7 @@ a#toggle{
 }
 
 .title-book {
+    margin-bottom: .5rem;
     font-weight: bold;
     text-align: center;
     font-size: larger;
@@ -448,6 +449,7 @@ a#toggle{
 img.img-fluid.img-book {border-top-left-radius: 10px;border-top-right-radius: 10px; height: 15rem;}
 
 .list-book-detail {
+    padding: 1.2rem !important;
     background: white;
     padding-top: 0px;
     border-bottom-left-radius: 10px;
@@ -554,4 +556,8 @@ h3.book-not-found {
 
 .card-text {
     text-align: left;
+}
+
+.book-list {
+    margin-top: 0px !important;
 }
