--- a/home/history.css
+++ b/home/history.css
@@ -62,6 +62,32 @@
     margin-left: 0.5rem;
 }
 
+@media (max-width: 767px) {
+    .label-info-custom {
+        float:right;
+    }
+
+}
+
 .custom-pagination-pos {
     margin-left: 45%;
+}
+
+.history-table {
+    padding: 0 2%;
+}
+
+.history-text {
+    font-size: 1.5rem
+}
+
+.panel-order .row .col-md-1 img {
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    padding-bottom: 5%;
+}
+
+.label-info-custom {
+    float:right;
 }
