--- a/style.css
+++ b/style.css
@@ -252,6 +252,12 @@ a#toggle{
         text-decoration: none;
     }
 
+    .list-title{
+        display: flex;
+        justify-content: center;
+        margin: auto;
+    }
+
 }
 
 @media (max-width: 800px){
@@ -303,6 +309,13 @@ a#toggle{
         border-radius: 10px;
         box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
     }
+
+    .list-title{
+        display: flex;
+        justify-content: center;
+        margin: auto;
+    }
+
 }
 
 @media (max-width: 450px){
