--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -673,3 +673,106 @@ h3.book-not-found {
   margin-top: 3rem;
   margin-bottom: 3rem;
 }
+
+
+/* Syle User Profil & Change Password */
+
+.content-user {
+    margin-left: 275px;
+}
+.container-profile {
+    background-color:lightblue;
+    margin: 20px;
+    border-radius: 50px;
+    padding: 50px;
+    box-shadow: 5px 5px 5px 1px gray;
+}
+
+.profile-account {
+    /* padding: 35px; */
+    text-align: center;
+}
+
+button.edit-profile {
+    font-size: 10px;
+    margin-top: 10px;
+}
+.edit-photo {
+    margin-top: -20px;
+}
+.edit-photo i {
+    padding: 5px;
+    margin-top: -50px;
+    margin-left: 75px;
+    border-radius: 50%;
+    background-color: white;
+    opacity: 0.5;
+    
+}
+
+.profile-account small {
+    text-align: center;
+}
+
+.title-profile {
+    margin: 10px 0 20px 30px;
+}
+.data-user {
+    padding-top: 5px;
+    padding-left: 30px;
+}
+
+.edit-btn {
+    padding: 25px;
+}
+
+.edit-btn a {
+    font-size: 25px;
+}
+
+.form-editprofile {
+    margin-left: 275px;
+}
+
+
+/* FORM EDIT PROFILE */
+#container-editform {
+    width: 50%;
+    background-color: lightblue;
+    margin: 20px auto;
+    padding: 20px 20px 75px 20px;
+    position: relative;
+    display: none;
+    
+}
+
+.form-item {
+    margin: 10px;
+}
+
+.form-item .input-value {
+    width: 100%;
+    padding: 5px;
+    border: 5px solid transparent;
+}
+
+.btn-editform {
+    position: absolute;
+    right: 5px;
+    bottom: 20px;
+    margin-top: 10px;
+    margin-right: 20px;
+    float: right;
+}
+
+@media (max-width: 767px){
+    /* .container-profile {
+        margin: 20px;
+        margin-top: 20px;
+        margin-left: 20px; 
+    }*/
+
+    .content-user {
+        margin: 0;
+    }
+}
