--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -776,3 +776,19 @@ button.edit-profile {
         margin: 0;
     }
 }
+
+
+/* Style Change_Password */
+
+.content-changepwd {
+    width: 50%;
+    border: 3px solid;
+    padding: 10px 10px 50px 10px;
+    position: relative;
+}
+
+.save-pwd {
+    bottom: 5px;
+    right: 10px;
+    position: absolute;
+}
