--- a/assets/css/topup.css
+++ b/assets/css/topup.css
@@ -1,170 +1,220 @@
-
 * {
-	margin: 0;
-	padding: 0;
-}
-i {
-	margin-right: 10px;
+    margin: 0;
+    padding: 0
 }
 
-.form-control:focus{
-	outline: none;
-	box-shadow: none;
-}
-.form-control:disabled, .form-control[readonly]{
-	background-color: #fff;
-}
-/*----------step-wizard------------*/
-.d-flex{
-	display: flex;
-}
-.justify-content-center{
-	justify-content: center;
-}
-.align-items-center{
-	align-items: center;
+html {
+    height: 100%
 }
 
-/*---------signup-step-------------*/
-.bg-color{
-	background-color: #333;
-}
-.signup-step-container{
-	padding: 150px 0px;
-	padding-bottom: 60px;
+p {
+    color: grey
 }
 
+#heading {
+    text-transform: uppercase;
+    color: black;
+    font-weight: normal
+}
 
-
-
-    .wizard .nav-tabs {
-        position: relative;
-        margin-bottom: 0;
-        border-bottom-color: transparent;
-    }
-
-    .wizard > div.wizard-inner {
-            position: relative;
-    margin-bottom: 50px;
+#msform {
     text-align: center;
-    }
-
-.connecting-line {
-    height: 2px;
-    background: #e0e0e0;
-    position: absolute;
-    width: 75%;
-    margin: 0 auto;
-    left: 0;
-    right: 0;
-    top: 15px;
-    z-index: 1;
+    position: relative;
+    margin-top: 20px
 }
 
-.wizard .nav-tabs > li.active > a, .wizard .nav-tabs > li.active > a:hover, .wizard .nav-tabs > li.active > a:focus {
-    color: #555555;
-    cursor: default;
-    border: 0;
-    border-bottom-color: transparent;
+#msform fieldset {
+    background: white;
+    border: 0 none;
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    width: 100%;
+    margin: 0;
+    padding-bottom: 20px;
+    position: relative
 }
 
-span.round-tab {
-    width: 30px;
-    height: 30px;
-    line-height: 30px;
-    display: inline-block;
-    border-radius: 50%;
-    background: #fff;
-    z-index: 2;
-    position: absolute;
-    left: 0;
-    text-align: center;
+.form-card {
+    text-align: left
+}
+
+#msform fieldset:not(:first-of-type) {
+    display: none
+}
+
+#msform input,
+#msform textarea {
+    padding: 8px 15px 8px 15px;
+    border: 1px solid #ccc;
+    border-radius: 0px;
+    margin-bottom: 25px;
+    margin-top: 2px;
+    width: 100%;
+    box-sizing: border-box;
+    font-family: montserrat;
+    color: #2C3E50;
+    background-color: #ECEFF1;
     font-size: 16px;
-    color: #0e214b;
-    font-weight: 500;
-    border: 1px solid #ddd;
-}
-span.round-tab i{
-    color:#555555;
-}
-.wizard li.active span.round-tab {
-        background: #0db02b;
-    color: #fff;
-    border-color: #0db02b;
-}
-.wizard li.active span.round-tab i{
-    color: #5bc0de;
-}
-.wizard .nav-tabs > li.active > a i{
-	color: #0db02b;
+    letter-spacing: 1px
 }
 
-.wizard .nav-tabs > li {
-    width: 25%;
+#msform input:focus,
+#msform textarea:focus {
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: 1px solid black;
+    outline-width: 0
 }
 
-.wizard li:after {
-    content: " ";
-    position: absolute;
-    left: 46%;
-    opacity: 0;
-    margin: 0 auto;
-    bottom: 0px;
-    border: 5px solid transparent;
-    border-bottom-color: red;
-    transition: 0.1s ease-in-out;
+#msform .action-button {
+    width: 100px;
+    background: black;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 0px;
+    cursor: pointer;
+    padding: 10px 5px;
+    margin: 10px 0px 10px 5px;
+    float: right
 }
 
-
-
-.wizard .nav-tabs > li a {
-    width: 30px;
-    height: 30px;
-    margin: 20px auto;
-    border-radius: 100%;
-    padding: 0;
-    background-color: transparent;
-    position: relative;
-    top: 0;
-}
-.wizard .nav-tabs > li a i{
-	position: absolute;
-    top: -15px;
-    font-style: normal;
-    font-weight: 400;
-    white-space: nowrap;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 12px;
-    font-weight: 700;
-    color: #000;
+#msform .action-button:hover,
+#msform .action-button:focus {
+    background-color: grey
 }
 
-    .wizard .nav-tabs > li a:hover {
-        background: transparent;
-    }
-
-.wizard .tab-pane {
-    position: relative;
-    padding-top: 20px;
+#msform .action-button-previous {
+    width: 100px;
+    background: #616161;
+    font-weight: bold;
+    color: white;
+    border: 0 none;
+    border-radius: 0px;
+    cursor: pointer;
+    padding: 10px 5px;
+    margin: 10px 5px 10px 0px;
+    float: right
 }
 
-
-.wizard h3 {
-    margin-top: 0;
+#msform .action-button-previous:hover,
+#msform .action-button-previous:focus {
+    background-color: #000000
 }
-.prev-step,
-.next-step{
-    font-size: 13px;
-    padding: 8px 24px;
+
+.card {
+    z-index: 0;
     border: none;
-    border-radius: 4px;
-    margin-top: 30px;
-}
-.next-step{
-	background-color: #0db02b;
+    position: relative
 }
 
+.fs-title {
+    font-size: 25px;
+    color: black;
+    margin-bottom: 15px;
+    font-weight: normal;
+    text-align: left
+}
+
+.purple-text {
+    color:black
+    font-weight: normal
+}
+
+.steps {
+    font-size: 25px;
+    color: gray;
+    margin-bottom: 10px;
+    font-weight: normal;
+    text-align: right
+}
+
+.fieldlabels {
+    color: gray;
+    text-align: left
+}
+
+#progressbar {
+    margin-bottom: 30px;
+    overflow: hidden;
+    color: lightgrey
+}
+
+#progressbar .active {
+    color: black
+}
+
+#progressbar li {
+    list-style-type: none;
+    font-size: 15px;
+    width: 25%;
+    float: left;
+    position: relative;
+    font-weight: 400
+}
+
+#progressbar #nominal:before {
+    font-family: FontAwesome;
+    content: "\f13e"
+}
+
+#progressbar #payment:before {
+    font-family: FontAwesome;
+    content: "\f007"
+}
+
+#progressbar #confirm:before {
+    font-family: FontAwesome;
+    content: "\f030"
+}
+
+#progressbar #password:before {
+    font-family: FontAwesome;
+    content: "\f00c"
+}
+
+#progressbar li:before {
+    width: 50px;
+    height: 50px;
+    line-height: 45px;
+    display: block;
+    font-size: 20px;
+    color: #ffffff;
+    background: lightgray;
+    border-radius: 50%;
+    margin: 0 auto 10px auto;
+    padding: 2px
+}
+
+#progressbar li:after {
+    content: '';
+    width: 100%;
+    height: 2px;
+    background: lightgray;
+    position: absolute;
+    left: 0;
+    top: 25px;
+    z-index: -1
+}
+
+#progressbar li.active:before,
+#progressbar li.active:after {
+    background: black
+}
+
+.progress {
+    height: 20px
+}
+
+.progress-bar {
+    background-color:black
+}
+
+.fit-image {
+    width: 100%;
+    object-fit: cover
+}
 
 .radio-group2 {
     position: relative;
