--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -679,14 +679,14 @@ h3.book-not-found {
 /* Syle User Profil & Change Password */
 
 .content-user {
-    margin-left: 275px;
+    padding-top: 20px;
 }
 .container-profile {
-    background-color:lightblue;
+    background-color:white;
     margin: 20px;
     border-radius: 50px;
     padding: 50px;
-    box-shadow: 5px 5px 5px 1px gray;
+    box-shadow: 5px 5px 10px 1px gray;
 }
 
 .profile-account {
@@ -725,6 +725,13 @@ button.edit-profile {
 
 .data a{
     color: black;
+    text-decoration: none;
+    transition: .8s ease;
+}
+
+.data a:hover {
+    font-size: 15px;
+    color: blue;
 }
 .edit-btn {
     padding: 25px;
@@ -742,11 +749,13 @@ button.edit-profile {
 /* FORM EDIT PROFILE */
 #container-editform {
     width: 50%;
-    background-color: lightblue;
-    margin: 20px auto;
+    background-color: white;
+    margin: 40px auto;
     padding: 20px 20px 75px 20px;
     position: relative;
     display: none;
+    border-radius: 5px;
+    box-shadow:  0 5px 10px 0 gray;
     
 }
 
@@ -757,7 +766,7 @@ button.edit-profile {
 .form-item .input-value {
     width: 100%;
     padding: 5px;
-    border: 5px solid transparent;
+    border: 1px solid #D6DCE4;
 }
 
 .btn-editform {
@@ -799,16 +808,17 @@ button.edit-profile {
 /* Style Change_Password */
 
 .container-changepwd {
-    margin-left: 275px;
+    padding: 20px 50px 20px 50px;
 }
 
 .content-changepwd {
     width: 75%;
     padding: 30px 0 60px 30px;
     position: relative;
-    background-color: lightblue;
-    margin: 150px auto;
+    background-color: white;
+    margin: auto;
     border-radius: 10px;
+    box-shadow: 3px 3px 5px 2px gray;
 }
 
 h3.changepwd-title {
