--- a/assets/css/customtable.css
+++ b/assets/css/customtable.css
@@ -9,3 +9,17 @@
 .add-btn {
     margin-left: 1.2rem;
 }
+
+@media (max-width: 426px){
+    .ctm-responsive {
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 764px) {
+    .paging_simple_numbers {
+        display: flex;
+        justify-content: center;
+    }
+}
