--- a/assets/css/topup.css
+++ b/assets/css/topup.css
@@ -14,7 +14,7 @@ p {
 #heading {
     text-transform: uppercase;
     color: black;
-    font-weight: normal
+    font-weight: bold
 }
 
 #msform {
@@ -42,7 +42,7 @@ p {
     display: none
 }
 
-#msform input,
+/* #msform input,
 #msform textarea {
     padding: 8px 15px 8px 15px;
     border: 1px solid #ccc;
@@ -56,7 +56,7 @@ p {
     background-color: #ECEFF1;
     font-size: 16px;
     letter-spacing: 1px
-}
+} */
 
 #msform input:focus,
 #msform textarea:focus {
@@ -68,15 +68,15 @@ p {
 }
 
 #msform .action-button {
-    width: 100px;
+    width: 8rem;
     background: black;
     font-weight: bold;
     color: white;
-    border: 0 none;
-    border-radius: 0px;
+    /* border: 0 none;
+    border-radius: 0px; */ */
     cursor: pointer;
     padding: 10px 5px;
-    margin: 10px 0px 10px 5px;
+    margin-top: 1.5rem;
     float: right
 }
 
@@ -86,15 +86,15 @@ p {
 }
 
 #msform .action-button-previous {
-    width: 100px;
+    width: 8rem;
     background: #616161;
     font-weight: bold;
     color: white;
-    border: 0 none;
-    border-radius: 0px;
+    /* border: 0 none;
+    border-radius: 0px; */
     cursor: pointer;
     padding: 10px 5px;
-    margin: 10px 5px 10px 0px;
+    margin: 1.5rem 1.5rem;
     float: right
 }
 
@@ -110,7 +110,6 @@ p {
 }
 
 .fs-title {
-    font-size: 25px;
     color: black;
     margin-bottom: 15px;
     font-weight: normal;
@@ -123,9 +122,7 @@ p {
 }
 
 .steps {
-    font-size: 25px;
     color: gray;
-    margin-bottom: 10px;
     font-weight: normal;
     text-align: right
 }
@@ -216,7 +213,7 @@ p {
     object-fit: cover
 }
 
-.radio-group2 {
+/* .radio-group2 {
     position: relative;
     margin-bottom: 25px
 }
@@ -231,12 +228,12 @@ p {
     box-sizing: border-box;
     cursor: pointer;
     margin: 8px 2px
-}
+}*/
 
 .radio1:hover {
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.3)
+    box-shadow: 2px 2px 2px 2px rgba(107, 67, 67, 0.3)
 }
 
 .radio1.selected {
-    box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.1)
+    box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2)
 }
