--- a/assets/css/customtable.css
+++ b/assets/css/customtable.css
@@ -1,3 +1,7 @@
+section.pdg-btm {
+    padding: 1px!important;
+}
+
 .head-number {
     width: 8px;
 }
@@ -9,6 +13,8 @@
 .add-btn {
     margin-left: 1.2rem;
 }
+
+
 
 @media (max-width: 426px){
     .ctm-responsive {
