menambahkan tag section dan style pada pembungkus edit form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -752,6 +752,10 @@ button.edit-profile {
 
 
 /* FORM EDIT PROFILE */
+section.padding-editform {
+    padding: 1px;
+}
+
 #container-editform {
     width: 50%;
     background-color: white;
