--- a/assets/css/styleuser.css
+++ b/assets/css/styleuser.css
@@ -660,7 +660,7 @@ h3.book-not-found {
   margin: 1rem;
 }
 
-.carousel-cell {
+.main-carousel .carousel-cell {
   width: 37.5rem;
   height: 300px;
   margin-right: 68px !important;
@@ -950,4 +950,19 @@ small.passwordHelpBlock {
   .hero-book {
     display: none;
   }
+}
+
+.list-book-bottom {
+  margin-right: 2rem;
+  height: 17.3rem;
+  width: 11.1rem;
+  border-radius: 4px;
+  -webkit-box-shadow: 0 3px 14px 2px rgba(34, 34, 34, 0.08),
+    0 7px 10px 1px rgba(34, 34, 34, 0.1);
+  box-shadow: 0 3px 14px 2px rgba(34, 34, 34, 0.08),
+    0 7px 10px 1px rgba(34, 34, 34, 0.1);
+}
+
+.book-list-bottom {
+  margin-bottom: 3rem;
 }
