--- a/assets/css/topup.css
+++ b/assets/css/topup.css
@@ -239,3 +239,33 @@ p {
 .radio1.selected {
     box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2)
 }
+
+@media (max-width: 430px){
+    .radio-group .icheck-primary{
+        margin-left: 25px;
+    }
+}
+
+@media (max-width: 380px){
+    .radio-group .icheck-primary{
+        margin-left: 50px;        
+    }
+
+    #msform .action-button-previous{
+        margin:1.5rem 1.0rem;
+    }
+}
+
+@media (max-width: 320px){
+    .radio-group .icheck-primary{
+        margin-left: 30px;        
+    }
+
+    #msform .action-button-previous{
+        margin:-2.9rem 8.3rem;
+    }
+
+    #msform .past{
+        margin:1.5rem 1.0rem;
+    }
+}
